# flask-mega-tutorial

./: docker-compose.yml  pyproject.toml
docker/: Dockerfile  app-entrypoint.sh  docker-entrypoint.sh  migration-entrypoint.sh
flask_mega_tutorial/: __init__.py  config.py  models.py  wsgi.py
flask_mega_tutorial/main/: routes.py
flask_mega_tutorial/posts/: forms.py  routes.py
flask_mega_tutorial/templates/: create_post.html  home.html  layout.html  login.html  register.html  view_post.html
flask_mega_tutorial/templates/macros/: form.html
flask_mega_tutorial/users/: forms.py  routes.py
migrations/versions/: 1d8369c293fa_add_posts_table.py  954707c38061_add_users_table.py
scripts/: build.sh  generate_migration.sh  lint.sh
