[tool.poetry]
name = "flask-mega-tutorial"
version = "0.1.0"
description = ""
authors = ["Joe Matusik <jpmatusik@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-WTF = "~0.14.3"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["flask_mega_tutorial"]
skip_gitignore = true
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
